--- a/fnodes/Cargo.toml
+++ b/fnodes/Cargo.toml
@@ -6,5 +6,8 @@ edition = "2021"
 [dependencies]
 ariadne = "0.1.3"
 chumsky = "0.8.0"
+num = "0.4.0"
+
+[features]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
