--- a/fnodes/Cargo.toml
+++ b/fnodes/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 ariadne = "0.1.3"
 chumsky = "0.8.0"
-num = "0.4.0"
+lasso = { version = "0.6.0", features = ["multi-threaded"] }
 
 [features]
 
