--- a/feather/Cargo.toml
+++ b/feather/Cargo.toml
@@ -8,4 +8,6 @@ edition = "2021"
 [dependencies]
 fcommon = { path = "../fcommon" }
 fnodes = { path = "../fnodes" }
+notify = "4.0.17"
+parking_lot = "0.12.0"
 salsa = "0.16.1"
