--- a/fcommon/Cargo.toml
+++ b/fcommon/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lasso = "0.6.0"
+ariadne = { version = "0.1.3", optional = true }
 salsa = "0.16.1"
+
+[features]
