--- a/feather/Cargo.toml
+++ b/feather/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2021"
 [dependencies]
 fcommon = { path = "../fcommon" }
 fnodes = { path = "../fnodes" }
-lasso = "0.6.0"
 notify = "4.0.17"
 parking_lot = "0.12.0"
 salsa = "0.16.1"
+
+[features]
