--- a/feather/Cargo.toml
+++ b/feather/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-fcommon = { path = "../fcommon" }
+fcommon = { path = "../fcommon", features = ["ariadne"] }
 fnodes = { path = "../fnodes" }
 notify = "4.0.17"
 parking_lot = "0.12.0"
