--- a/fcommon/Cargo.toml
+++ b/fcommon/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 ariadne = { version = "0.1.3", optional = true }
 salsa = "0.16.1"
+tracing = "0.1.31"
 
 [features]
