--- a/feather/Cargo.toml
+++ b/feather/Cargo.toml
@@ -11,5 +11,7 @@ fnodes = { path = "../fnodes" }
 notify = "4.0.17"
 parking_lot = "0.12.0"
 salsa = "0.16.1"
+tracing = "0.1.31"
+tracing-subscriber = { version = "0.3.9", features = ["time", "ansi"] }
 
 [features]
