--- a/fnodes/Cargo.toml
+++ b/fnodes/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 chumsky = "0.8.0"
 fcommon = { version = "0.0.0", path = "../fcommon" }
 salsa = "0.16.1"
+tracing = "0.1.31"
 
 [features]
 
