--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["feather", "fcommon", "fnodes"]
+members = ["feather", "fcommon", "fnodes", "fvalue"]
 default-members = ["feather"]
