--- a/feather/Cargo.toml
+++ b/feather/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2021"
 [dependencies]
 fcommon = { path = "../fcommon", features = ["ariadne"] }
 fnodes = { path = "../fnodes" }
+fvalue = { path = "../fvalue" }
 notify = "4.0.17"
-parking_lot = "0.12.0"
 salsa = "0.16.1"
 tracing = "0.1.31"
 tracing-subscriber = { version = "0.3.9", features = ["time", "ansi"] }
