Value inference is a query
Signed-off-by: thirdsgames <thirdsgames2018@gmail.com>

--- a/fvalue/Cargo.toml
+++ b/fvalue/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 fcommon = { path = "../fcommon" }
 fnodes = { path = "../fnodes" }
+salsa = "0.16.1"
 tracing = "0.1.31"
