--- a/fnodes/Cargo.toml
+++ b/fnodes/Cargo.toml
@@ -9,6 +9,7 @@ fcommon = { version = "0.0.0", path = "../fcommon" }
 fnodes_macros = { version = "0.0.0", path = "../fnodes_macros" }
 salsa = "0.16.1"
 tracing = "0.1.31"
+upcast = "0.1.0"
 
 [features]
 
