--- a/feather/Cargo.toml
+++ b/feather/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 fcommon = { path = "../fcommon", features = ["ariadne"] }
 fnodes = { path = "../fnodes" }
 fvalue = { path = "../fvalue" }
+fkernel = { path = "../fkernel" }
 notify = "4.0.17"
 salsa = "0.16.1"
 tracing = "0.1.31"
