--- a/fcommon/Cargo.toml
+++ b/fcommon/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 ariadne = { version = "0.1.3", optional = true }
 salsa = "0.16.1"
 tracing = "0.1.31"
+upcast = "0.1.0"
 
 [features]
