Create testing infrastructure
Signed-off-by: thirdsgames <thirdsgames2018@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["feather", "fcommon", "fnodes", "fnodes_macros"]
+members = ["feather", "fkernel_tests"]
 default-members = ["feather"]
