--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["feather", "fkernel_tests"]
-default-members = ["feather"]
+members = ["feather", "fkernel_tests", "quill"]
+default-members = ["quill"]
