--- a/fnodes/Cargo.toml
+++ b/fnodes/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2021"
 
 [dependencies]
 chumsky = "0.8.0"
-fcommon = { version = "0.0.0", path = "../fcommon" }
-fnodes_macros = { version = "0.0.0", path = "../fnodes_macros" }
+fcommon = { path = "../fcommon" }
+fnodes_macros = { path = "../fnodes_macros" }
 salsa = "0.16.1"
 tracing = "0.1.31"
 upcast = "0.1.0"
