--- a/qelab/Cargo.toml
+++ b/qelab/Cargo.toml
@@ -1,13 +1,15 @@
 [package]
-name = "qparse"
+name = "qelab"
 version = "0.0.0"
 edition = "2021"
+description = "Quill's elaborator, used for turning parsed Quill code into Feather code"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 fcommon = { path = "../fcommon" }
+fkernel = { path = "../fkernel" }
 fnodes = { path = "../fnodes" }
+qparse = { path = "../qparse" }
 salsa = "0.16.1"
 tracing = "0.1.35"
-upcast = "0.1.0"
