--- a/quill/Cargo.toml
+++ b/quill/Cargo.toml
@@ -6,9 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-fcommon = { path = "../fcommon" }
+fcommon = { path = "../fcommon", features = ["ariadne"] }
+fkernel = { path = "../fkernel" }
+fnodes = { path = "../fnodes" }
 notify = "4.0.17"
+qelab = { path = "../qelab" }
 qparse = { path = "../qparse" }
 salsa = "0.16.1"
 tracing = "0.1.35"
 tracing-subscriber = "0.3.14"
+upcast = "0.1.0"
