Basic language server
Signed-off-by: thirdsgames <thirdsgames2018@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["feather", "fkernel_tests", "quill"]
+members = ["feather", "fkernel_tests", "quill", "qlsp"]
 default-members = ["quill"]
